--- a/src/Form.css
+++ b/src/Form.css
@@ -1,53 +1,10 @@
-@import url("https://cdn.syncfusion.com/ej2/material.css");
-.input-container input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
-  /* Estilos para el contenedor principal del formulario */
-  .form-container {
-    max-width: 800px;
-    margin: 0 auto;
+
+
+form {
+    background-color: #f0f0f0; 
     padding: 20px;
-  }
-  
-  /* Estilos para el contenedor de fecha y hora */
-  .datetime-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  /* Estilos para los botones */
-  .button-container {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-  }
-  
-  /* Estilos para la tabla */
-  .table {
-    width: 100%;
-  }
-  
-  /* Estilos responsivos para dispositivos móviles */
-  @media (max-width: 768px) {
-    .input-container input {
-      font-size: 14px;
-      padding: 8px;
-    }
-  
-    .datetime-container {
-      flex-direction: column;
-    }
-  
-    .button-container {
-      flex-direction: column;
-      align-items: flex-end;
-    }
+    border-radius: 5px;
+    margin: 0 auto; 
+    width: 70%; 
   }
   
