--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 body {
-  background-color: rgb(150, 79, 29);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  color: #333;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: sans-serif;
+  background-color: #746d5ad2;
 }
+
 h1{
   text-align: center;
   color: black;
-  padding: 20px;
+  border: double 15px #ccd865;
+
+
+
 }
 h2{
 background-color: #707a11;
@@ -24,8 +22,10 @@ text-align: center;
 
 h4{
   text-align: center;
+  border:20px solid #707a11;
+  padding: 55px;
   color: black;
-  padding: 15px;
+
 }
 
 .custom-navbar {
@@ -60,6 +60,11 @@ table{
   border-radius: 5px solid black;
   background-color: #c9a456;
 }
+
+.carousel{
+border: 30px solid #707a11;
+}
+
 
 .contacto{
   text-align: center;
